playing around trying to figure out database state stuff

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase-tools": "^12.8.0",
     "next": "^14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
