housekeeping/updated key files. AuthContext & protected routes broken still.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@/lib/*": ["./app/lib/*"],
       "@/context/*": ["./app/context/*"],
       "@/constants/*": ["./app/constants/*"],
-      "@/services/*": ["./app/services/*"]
+      "@/services/*": ["./app/services/*"],
+      "@/dashboard/*": ["./app/dashboard/*"]
     }
   },
   "include": [
