--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.5.2",
     "firebase-tools": "^12.8.0",
     "next": "^14.0.1",
+    "next-plugin-svgr": "^1.1.10",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1"
@@ -29,12 +30,12 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5",
     "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
+    "postcss": "^8",
     "prettier": "^3.1.0",
-    "lint-staged": "^15.2.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --fix",
