--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@next/font": "^14.0.4",
     "firebase": "^10.5.2",
     "firebase-tools": "^12.8.0",
+    "framer-motion": "^10.18.0",
     "next": "^14.0.1",
     "next-plugin-svgr": "^1.1.10",
     "react": "^18",
