--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
       "@/utils/*": ["./src/utils/*"],
       "@/constants/*": ["./src/constants/*"],
       "@/services/*": ["./src/services/*"],
-      "@/dashboard/*": ["./src/app/dashboard/*"]
+      "@/dashboard/*": ["./src/app/dashboard/*"],
+      "@/svg/*": [".src/app/components/svg"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/page.jsx"],
