--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next-plugin-svgr": "^1.1.10",
     "react": "^18",
     "react-dom": "^18",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-phone-number-input": "^3.3.9"
   },
   "devDependencies": {
     "@types/node": "^20",
