--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.9",
     "@next/font": "^14.0.4",
     "firebase": "^10.5.2",
     "firebase-tools": "^12.8.0",
