--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
       "@/svg/*": ["./src/components/svg/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ".next/types/app/dashboard/layout.ts"],
+  "exclude": ["node_modules", "./src/**/*.js", "./src/**/*.jsx"]
 }
