--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
-    "react-phone-number-input": "^3.3.9"
+    "react-phone-number-input": "^3.3.9",
+    "react-slider": "^2.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
